# The-Crypto-Challenge

./: .gitignore  CMakeLists.txt
challenge1/: CMakeLists.txt
challenge1/src/: config.h.in  main.cpp
challenge2/: CMakeLists.txt
challenge2/src/: config.h.in  main.cpp
commons/: CMakeLists.txt
commons/include/: base64.h  binary.h  io.h
commons/src/: base64.cpp  binary.cpp  io.cpp
